test/error/E22.1.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": {
		"if": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
		{
			"type": "data",
			"input": ["if", 0],
			"output": ["if", 0]
		}
	]
}
